<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    >

    <!-- Rectangle 39 -->
    <View
        android:id="@+id/Screen_Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/screen_background" />

    <!-- log-in -->

    <RelativeLayout
        android:id="@+id/log_in"
        android:layout_width="24.13dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="771dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/log_in"
        android:clipToOutline="true" />

    <!-- Frame -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipToOutline="true"
        android:background="@drawable/spygame"
        />

    <!-- Card -->

    <TextView
        android:id="@+id/settings"
        android:layout_width="214dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="294dp"
        android:layout_marginTop="79dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="8sp"
        android:text="@string/settings"
        android:textAppearance="@style/settings" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="41dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="185dp"
        android:background="@drawable/card"
        android:elevation="4dp"
        tools:ignore="DuplicateIds"
        />

    <!-- Audio -->
    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="187dp"
        android:background="@drawable/card"
        android:elevation="4dp"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/audio"
        android:layout_width="98dp"
        android:layout_height="20.72dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="72dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="193.14dp"
        android:text="@string/audio"
        android:textAppearance="@style/audio"
        android:lineSpacingExtra="5sp"
        android:gravity="center_horizontal|center_vertical"
        />

    <!-- Rectangle 28 -->
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="237dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="223dp"
        android:background="@drawable/bar"
        />

    <!-- Ellipse 2 -->
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="221dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="217dp"
        android:background="@drawable/ellipse"
        />

    <!-- Card -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card"
        android:layout_width="161dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="41dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="274dp"
        android:background="@drawable/card"
        android:elevation="4dp"
        />

    <!-- Vibration -->
    <TextView
        android:id="@+id/vibration"
        android:layout_width="98dp"
        android:layout_height="20.16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="72dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="281.92dp"
        android:text="@string/vibration"
        android:textAppearance="@style/vibration"
        android:lineSpacingExtra="5sp"
        android:gravity="center_horizontal|center_vertical"
        />

    <!-- Rectangle 38 -->
    <View
        android:id="@+id/rectangle_3"
        android:layout_width="237dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="299dp"
        android:background="@drawable/bar"
        />

    <!-- Ellipse 3 -->
    <View
        android:id="@+id/ellipse_3"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="109dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="294dp"
        android:background="@drawable/ellipse"
        />

</RelativeLayout>

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="65dp">

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <TextView
            android:id="@+id/Audio"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/audio" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="139dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/vibration" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="139dp"
            android:layout_height="wrap_content" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout> -->