<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    >


    <View
        android:id="@+id/Screen_Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/screen_background" />


    <ImageView
        android:id="@+id/spy_game"
        android:layout_width="212dp"
        android:layout_height="106dp"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/spy_game"/>

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="700dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/exit"
        android:background="@color/background"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="336dp"
        android:layout_marginTop="98dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/settings"
        android:textAppearance="@style/settings" />

    <RelativeLayout
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="186dp"
        android:background="@drawable/card"
        android:elevation="0dp" />
    <TextView
        android:id="@+id/audio"
        android:layout_width="98dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="191dp"
        android:text="@string/audio"
        android:textAppearance="@style/audio"
        android:lineSpacingExtra="5sp"
        android:gravity="center_horizontal|center_vertical"
        />

    <SeekBar
        android:id="@+id/seekbar1"
        android:layout_width="237dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="239dp"
        android:background="@drawable/seekbar"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card2"
        android:layout_width="161dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="266dp"
        android:background="@drawable/card"
        android:elevation="0dp"
        />

    <TextView
        android:id="@+id/vibration"
        android:layout_width="98dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="271dp"
        android:text="@string/vibration"
        android:textAppearance="@style/vibration"
        android:gravity="center_horizontal|center_vertical"
        />

    <SeekBar
        android:id="@+id/seekbar2"
        android:layout_width="237dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="319dp"
        android:background="@drawable/seekbar"
        />

</RelativeLayout>



    <!-- <TextView
        android:id="@+id/settings"
        android:layout_width="214dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="294dp"
        android:layout_marginTop="79dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="8sp"
        android:text="@string/settings"
        android:textAppearance="@style/settings" />

    <RelativeLayout
        android:id="@+id/card2"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/card"
        android:elevation="0dp"
        tools:ignore="DuplicateIds" >

    </RelativeLayout>

    <View
        android:id="@+id/rectangle2"
        android:layout_width="237dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="223dp"
        android:background="@drawable/bar"
        />

    <View
        android:id="@+id/ellipse2"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="221dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="217dp"
        android:background="@drawable/ellipse"
        />

    <RelativeLayout
        android:id="@+id/card3"
        android:layout_width="161dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/card"
        android:elevation="0dp" >

        <TextView
            android:id="@+id/vibration"
            android:layout_width="98dp"
            android:layout_height="20.16dp"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="281.92dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="5sp"
            android:text="@string/vibration"
            android:textAppearance="@style/vibration" />


    </RelativeLayout>

    <View
        android:id="@+id/rectangle3"
        android:layout_width="237dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="299dp"
        android:background="@drawable/bar"
        />

    <View
        android:id="@+id/ellipse3"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="109dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="294dp"
        android:background="@drawable/ellipse"
        />

    <TextView
        android:id="@+id/audio"
        android:layout_width="98dp"
        android:layout_height="20.72dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="179dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="5sp"
        android:text="@string/audio"
        android:textAppearance="@style/audio" /> -->









    <!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/settings"
        android:textAppearance="@style/settings"
        android:layout_gravity="center"
        android:background="#333"
        android:textColor="#fff"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Button"/>

    </LinearLayout> -->

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="85dp"
         tools:layout_editor_absoluteY="65dp">

         <TextView
             android:id="@+id/settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/settings" />

         <TextView
             android:id="@+id/Audio"
             android:layout_width="116dp"
             android:layout_height="wrap_content"
             android:text="@string/audio" />

         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="139dp"
             android:layout_height="wrap_content" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="117dp"
             android:layout_height="wrap_content"
             android:text="@string/vibration" />

         <SeekBar
             android:id="@+id/seekBar2"
             android:layout_width="139dp"
             android:layout_height="wrap_content" />



     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout> -->